// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules/Select Custom valueComponent 1`] = `
.c0 {
  padding: 12px;
}

.c21 .c17 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c22 .c17 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c23 .c17 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c24 .c17 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c17 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c17 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c17 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c17 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c29 .c17 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c30 .c17 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c31 .c17 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c32 .c17 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c33 .c17 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c34 .c17 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c35 .c17 {
  font-size: 1.5em;
}

.c36 .c17 {
  font-size: 1.5em;
}

.c37 .c17 {
  font-size: 1.5em;
}

.c38 .c17 {
  font-size: 1.5em;
}

.c39 .c17 {
  font-size: 1.5em;
}

.c40 .c17 {
  font-size: 1.5em;
}

.c41 .c17 {
  font-size: 1.5em;
}

.c42 .c17 {
  font-size: 1.5em;
}

.c43 .c17 {
  font-size: 1.5em;
}

.c44 .c17 {
  font-size: 1.5em;
}

.c45 .c17 {
  font-size: 1.5em;
}

.c46 .c17 {
  font-size: 1.5em;
}

.c47 .c17 {
  font-size: 1.5em;
}

.c48 .c17 {
  font-size: 1.5em;
}

.c2 {
  position: relative;
  width: 100%;
}

.c4 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c5 {
  height: 100%;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c7:hover,
.c7:focus {
  background-color: #eee;
}

.c8 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c16 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c16:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c16:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c16::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c16::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c16:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c16::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c16[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #00a8d8;
  background-color: unset;
}

.c3:hover {
  border: 1px solid #999;
}

.c3:focus {
  border: 1px solid #222;
}

.c3::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c20 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c20:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c20:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c20::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c20::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c20:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c20::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c20[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c19 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c19:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c19:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c19::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c19::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c19:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c19::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c19[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c10 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #999;
  background-color: unset;
}

.c10:hover {
  border: 1px solid #999;
}

.c10:focus {
  border: 1px solid #222;
}

.c10::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c12 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #4caf50;
  background-color: unset;
}

.c12:hover {
  border: 1px solid #999;
}

.c12:focus {
  border: 1px solid #222;
}

.c12::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c11 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #ef5350;
  background-color: unset;
}

.c11:hover {
  border: 1px solid #999;
}

.c11:focus {
  border: 1px solid #222;
}

.c11::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c13 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 .c17 {
  pointer-events: none;
}

.c15 {
  padding-right: 2.2em;
}

.c18 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: NaNpx;
  cursor: not-allowed;
  right: 0.5em;
}

.c14[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c6 {
  padding: 20px 0;
}

.c6 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(4, fit-content(200px));
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      data-test="dropdown"
    >
      <input
        className="c3"
        onChange={[Function]}
        onClick={[Function]}
        placeholder="Choose option"
        type="text"
        value={null}
      />
      <div
        className="c4"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c5"
          onKeyDown={[Function]}
        >
          <div
            className="c6"
            onScroll={[Function]}
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "direction": "ltr",
                "height": 120,
                "overflow": "auto",
                "position": "relative",
                "width": "100%",
                "willChange": "transform",
              }
            }
          >
            <ul
              style={
                Object {
                  "height": 120,
                  "pointerEvents": "",
                  "width": "100%",
                }
              }
            >
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 20,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    one
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 50,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    two
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 80,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    three
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 110,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    four
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <input
        className="c10"
        onChange={[Function]}
        onClick={[Function]}
        placeholder="Choose option"
        type="text"
        value={null}
      />
      <div
        className="c4"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c5"
          onKeyDown={[Function]}
        >
          <div
            className="c6"
            onScroll={[Function]}
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "direction": "ltr",
                "height": 120,
                "overflow": "auto",
                "position": "relative",
                "width": "100%",
                "willChange": "transform",
              }
            }
          >
            <ul
              style={
                Object {
                  "height": 120,
                  "pointerEvents": "",
                  "width": "100%",
                }
              }
            >
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 20,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    one
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 50,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    two
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 80,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    three
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 110,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    four
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <input
        className="c11"
        onChange={[Function]}
        onClick={[Function]}
        placeholder="Choose option"
        type="text"
        value={null}
      />
      <div
        className="c4"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c5"
          onKeyDown={[Function]}
        >
          <div
            className="c6"
            onScroll={[Function]}
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "direction": "ltr",
                "height": 120,
                "overflow": "auto",
                "position": "relative",
                "width": "100%",
                "willChange": "transform",
              }
            }
          >
            <ul
              style={
                Object {
                  "height": 120,
                  "pointerEvents": "",
                  "width": "100%",
                }
              }
            >
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 20,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    one
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 50,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    two
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 80,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    three
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 110,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    four
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <input
        className="c12"
        onChange={[Function]}
        onClick={[Function]}
        placeholder="Choose option"
        type="text"
        value={null}
      />
      <div
        className="c4"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c5"
          onKeyDown={[Function]}
        >
          <div
            className="c6"
            onScroll={[Function]}
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "direction": "ltr",
                "height": 120,
                "overflow": "auto",
                "position": "relative",
                "width": "100%",
                "willChange": "transform",
              }
            }
          >
            <ul
              style={
                Object {
                  "height": 120,
                  "pointerEvents": "",
                  "width": "100%",
                }
              }
            >
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 20,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    one
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 50,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    two
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 80,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    three
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 110,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    four
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c13"
        onClick={[Function]}
      >
        <input
          className="c14 c15 c16"
          disabled={true}
          onChange={[Function]}
          placeholder="Choose option"
          type="text"
          value={null}
        />
        <span
          className="c17 c14 c18"
          disabled={true}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c4"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c5"
          onKeyDown={[Function]}
        >
          <div
            className="c6"
            onScroll={[Function]}
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "direction": "ltr",
                "height": 120,
                "overflow": "auto",
                "position": "relative",
                "width": "100%",
                "willChange": "transform",
              }
            }
          >
            <ul
              style={
                Object {
                  "height": 120,
                  "pointerEvents": "",
                  "width": "100%",
                }
              }
            >
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 20,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    one
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 50,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    two
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 80,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    three
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 110,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    four
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c13"
        onClick={[Function]}
      >
        <input
          className="c14 c15 c16"
          disabled={true}
          onChange={[Function]}
          placeholder="Choose option"
          type="text"
          value={null}
        />
        <span
          className="c17 c14 c18"
          disabled={true}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c4"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c5"
          onKeyDown={[Function]}
        >
          <div
            className="c6"
            onScroll={[Function]}
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "direction": "ltr",
                "height": 120,
                "overflow": "auto",
                "position": "relative",
                "width": "100%",
                "willChange": "transform",
              }
            }
          >
            <ul
              style={
                Object {
                  "height": 120,
                  "pointerEvents": "",
                  "width": "100%",
                }
              }
            >
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 20,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    one
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 50,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    two
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 80,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    three
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 110,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    four
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c13"
        onClick={[Function]}
      >
        <input
          className="c14 c15 c19"
          disabled={true}
          onChange={[Function]}
          placeholder="Choose option"
          type="text"
          value={null}
        />
        <span
          className="c17 c14 c18"
          disabled={true}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c4"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c5"
          onKeyDown={[Function]}
        >
          <div
            className="c6"
            onScroll={[Function]}
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "direction": "ltr",
                "height": 120,
                "overflow": "auto",
                "position": "relative",
                "width": "100%",
                "willChange": "transform",
              }
            }
          >
            <ul
              style={
                Object {
                  "height": 120,
                  "pointerEvents": "",
                  "width": "100%",
                }
              }
            >
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 20,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    one
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 50,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    two
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 80,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    three
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 110,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    four
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c13"
        onClick={[Function]}
      >
        <input
          className="c14 c15 c20"
          disabled={true}
          onChange={[Function]}
          placeholder="Choose option"
          type="text"
          value={null}
        />
        <span
          className="c17 c14 c18"
          disabled={true}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c4"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c5"
          onKeyDown={[Function]}
        >
          <div
            className="c6"
            onScroll={[Function]}
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "direction": "ltr",
                "height": 120,
                "overflow": "auto",
                "position": "relative",
                "width": "100%",
                "willChange": "transform",
              }
            }
          >
            <ul
              style={
                Object {
                  "height": 120,
                  "pointerEvents": "",
                  "width": "100%",
                }
              }
            >
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 20,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    one
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 50,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    two
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 80,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    three
                  </div>
                </div>
              </li>
              <li
                className="c7"
                onClick={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "height": 30,
                    "left": 0,
                    "position": "absolute",
                    "top": 110,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="c8"
                >
                  <div
                    className="c9"
                  >
                    four
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules/Select default 1`] = `
.c0 {
  padding: 12px;
}

.c14 .c6 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c15 .c6 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c16 .c6 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c17 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c6 {
  font-size: 1.5em;
}

.c29 .c6 {
  font-size: 1.5em;
}

.c30 .c6 {
  font-size: 1.5em;
}

.c31 .c6 {
  font-size: 1.5em;
}

.c32 .c6 {
  font-size: 1.5em;
}

.c33 .c6 {
  font-size: 1.5em;
}

.c34 .c6 {
  font-size: 1.5em;
}

.c35 .c6 {
  font-size: 1.5em;
}

.c36 .c6 {
  font-size: 1.5em;
}

.c37 .c6 {
  font-size: 1.5em;
}

.c38 .c6 {
  font-size: 1.5em;
}

.c39 .c6 {
  font-size: 1.5em;
}

.c40 .c6 {
  font-size: 1.5em;
}

.c41 .c6 {
  font-size: 1.5em;
}

.c1 {
  position: relative;
  width: 100%;
}

.c8 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c9 {
  height: 100%;
  width: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c11:hover,
.c11:focus {
  background-color: #eee;
}

.c12 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c6 {
  pointer-events: none;
}

.c4 {
  padding-right: 2.2em;
}

.c7 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: NaNpx;
  cursor: not-allowed;
  right: 0.5em;
}

.c3[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c10 {
  padding: 20px 0;
}

.c10 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="dropdown"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      <input
        className="c3 c4 c5"
        disabled={true}
        onChange={[Function]}
        type="text"
        value={null}
      />
      <span
        className="c6 c3 c7"
        disabled={true}
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c8"
      data-test="dropdown-content"
      open={false}
    >
      <div
        className="c9"
        onKeyDown={[Function]}
      >
        <div
          className="c10"
          onScroll={[Function]}
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "direction": "ltr",
              "height": 120,
              "overflow": "auto",
              "position": "relative",
              "width": "100%",
              "willChange": "transform",
            }
          }
        >
          <ul
            style={
              Object {
                "height": 120,
                "pointerEvents": "",
                "width": "100%",
              }
            }
          >
            <li
              className="c11"
              onClick={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "height": 30,
                  "left": 0,
                  "position": "absolute",
                  "top": 20,
                  "width": "100%",
                }
              }
              tabIndex={-1}
            >
              <div
                className="c12"
              >
                <div
                  className="c13"
                >
                  one
                </div>
              </div>
            </li>
            <li
              className="c11"
              onClick={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "height": 30,
                  "left": 0,
                  "position": "absolute",
                  "top": 50,
                  "width": "100%",
                }
              }
              tabIndex={-1}
            >
              <div
                className="c12"
              >
                <div
                  className="c13"
                >
                  two
                </div>
              </div>
            </li>
            <li
              className="c11"
              onClick={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "height": 30,
                  "left": 0,
                  "position": "absolute",
                  "top": 80,
                  "width": "100%",
                }
              }
              tabIndex={-1}
            >
              <div
                className="c12"
              >
                <div
                  className="c13"
                >
                  three
                </div>
              </div>
            </li>
            <li
              className="c11"
              onClick={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "height": 30,
                  "left": 0,
                  "position": "absolute",
                  "top": 110,
                  "width": "100%",
                }
              }
              tabIndex={-1}
            >
              <div
                className="c12"
              >
                <div
                  className="c13"
                >
                  four
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules/Select useTriggerComponentWidth = false 1`] = `
.c0 {
  padding: 12px;
}

.c14 .c6 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c15 .c6 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c16 .c6 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c17 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c6 {
  font-size: 1.5em;
}

.c29 .c6 {
  font-size: 1.5em;
}

.c30 .c6 {
  font-size: 1.5em;
}

.c31 .c6 {
  font-size: 1.5em;
}

.c32 .c6 {
  font-size: 1.5em;
}

.c33 .c6 {
  font-size: 1.5em;
}

.c34 .c6 {
  font-size: 1.5em;
}

.c35 .c6 {
  font-size: 1.5em;
}

.c36 .c6 {
  font-size: 1.5em;
}

.c37 .c6 {
  font-size: 1.5em;
}

.c38 .c6 {
  font-size: 1.5em;
}

.c39 .c6 {
  font-size: 1.5em;
}

.c40 .c6 {
  font-size: 1.5em;
}

.c41 .c6 {
  font-size: 1.5em;
}

.c1 {
  position: relative;
  width: 100%;
}

.c8 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c9 {
  height: 100%;
  width: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c11:hover,
.c11:focus {
  background-color: #eee;
}

.c12 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c6 {
  pointer-events: none;
}

.c4 {
  padding-right: 2.2em;
}

.c7 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: NaNpx;
  cursor: not-allowed;
  right: 0.5em;
}

.c3[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c10 {
  padding: 20px 0;
}

.c10 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="dropdown"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      <input
        className="c3 c4 c5"
        disabled={true}
        onChange={[Function]}
        type="text"
        value={null}
      />
      <span
        className="c6 c3 c7"
        disabled={true}
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c8"
      data-test="dropdown-content"
      open={false}
    >
      <div
        className="c9"
        onKeyDown={[Function]}
      >
        <div
          className="c10"
          onScroll={[Function]}
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "direction": "ltr",
              "height": 120,
              "overflow": "auto",
              "position": "relative",
              "width": "100%",
              "willChange": "transform",
            }
          }
        >
          <ul
            style={
              Object {
                "height": 120,
                "pointerEvents": "",
                "width": "100%",
              }
            }
          >
            <li
              className="c11"
              onClick={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "height": 30,
                  "left": 0,
                  "position": "absolute",
                  "top": 20,
                  "width": "100%",
                }
              }
              tabIndex={-1}
            >
              <div
                className="c12"
              >
                <div
                  className="c13"
                >
                  one
                </div>
              </div>
            </li>
            <li
              className="c11"
              onClick={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "height": 30,
                  "left": 0,
                  "position": "absolute",
                  "top": 50,
                  "width": "100%",
                }
              }
              tabIndex={-1}
            >
              <div
                className="c12"
              >
                <div
                  className="c13"
                >
                  two
                </div>
              </div>
            </li>
            <li
              className="c11"
              onClick={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "height": 30,
                  "left": 0,
                  "position": "absolute",
                  "top": 80,
                  "width": "100%",
                }
              }
              tabIndex={-1}
            >
              <div
                className="c12"
              >
                <div
                  className="c13"
                >
                  three
                </div>
              </div>
            </li>
            <li
              className="c11"
              onClick={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "height": 30,
                  "left": 0,
                  "position": "absolute",
                  "top": 110,
                  "width": "100%",
                }
              }
              tabIndex={-1}
            >
              <div
                className="c12"
              >
                <div
                  className="c13"
                >
                  four
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
